--- a/learning_log/learning_logs/base.html
+++ b/learning_log/learning_logs/base.html
@@ -1,6 +1,6 @@
 <p>
-  <a href="{% url 'index' %}">Learning Log</a> -
-  <a href="{% url 'topics' %}">Topics</a>
+  <a href="{% url 'learning_logs:index' %}">Learning Log</a> -
+  <a href="{% url 'learning_logs:topics' %}">Topics</a>
 </p>
 
 {% block content %}{% endblock content %}
