--- a/learning_log/learning_logs/edit_entry.html
+++ b/learning_log/learning_logs/edit_entry.html
@@ -1,14 +1,14 @@
-{% extends 'base.html' %}
+{% extends 'learning_logs/base.html' %}
 
 {% block content %}
-<p><a href="{% url 'topic' topic.id %}">{{ topic }}</a></p>
+<p><a href="{% url 'learning_logs:topic' topic.id %}">{{ topic }}</a></p>
 
 <p>Edit entry:</p>
-<form action="{% url 'edit_entry' entry.id %}" method="POST">
+<form action="{% url 'learning_logs:edit_entry' entry.id %}" method="POST">
   {% csrf_token %}
   {{ form.as_p }}
   <button name="submit">Save</button>
   <button type="reset">Discard</button>
-  <button onclick="{location.href='{% url 'topic' topic.id %}'}">Back</button>
+  <button onclick="{location.href='{% url 'learning_logs:topic' topic.id %}'}">Back</button>
 </form>
 {% endblock content %}
