--- a/learning_log/learning_logs/new_entry.html
+++ b/learning_log/learning_logs/new_entry.html
@@ -1,13 +1,13 @@
-{% extends 'base.html' %}
+{% extends 'learning_logs/base.html' %}
 
 {% block content %}
-<p><a href="{% url 'topic' topic.id %}">{{ topic }}</a></p>
+<p><a href="{% url 'learning_logs:topic' topic.id %}">{{ topic }}</a></p>
 
 <p>Add a new entry:</p>
-<form action="{% url 'new_entry' topic.id %}" method="POST">
+<form action="{% url 'learning_logs:new_entry' topic.id %}" method="POST">
   {% csrf_token %}
   {{ form.as_p }}
   <button name="submit">Add</button>
-  <button onclick="{location.href='{% url 'topic' topic.id %}'}">Back</button>
+  <button onclick="{location.href='{% url 'learning_logs:topic' topic.id %}'}">Back</button>
 </form>
 {% endblock content %}
