--- a/learning_log/learning_logs/new_topic.html
+++ b/learning_log/learning_logs/new_topic.html
@@ -1,11 +1,11 @@
-{% extends 'base.html' %}
+{% extends 'learning_logs/base.html' %}
 
 {% block content %}
 <p>Add a new topic:</p>
-<form action="{% url 'new_topic' %}" method="POST">
+<form action="{% url 'learning_logs:new_topic' %}" method="POST">
   {% csrf_token %}
   {{ form.as_p }}
   <button name="submit">Add</button>
-  <button onclick="{location.href='{% url 'topics' %}'}">Back</button>
+  <button onclick="{location.href='{% url 'learning_logs:topics' %}'}">Back</button>
 </form>
 {% endblock content %}
