Support user login and logout.

--- a/learning_log/learning_logs/edit_entry.html
+++ b/learning_log/learning_logs/edit_entry.html
@@ -11,4 +11,4 @@
   <button type="reset">Discard</button>
   <button onclick="{location.href='{% url 'learning_logs:topic' topic.id %}'}">Back</button>
 </form>
-{% endblock content %}
+{% endblock %}
