--- a/learning_log/learning_logs/new_entry.html
+++ b/learning_log/learning_logs/new_entry.html
@@ -10,4 +10,4 @@
   <button name="submit">Add</button>
   <button onclick="{location.href='{% url 'learning_logs:topic' topic.id %}'}">Back</button>
 </form>
-{% endblock content %}
+{% endblock %}
