--- a/learning_log/learning_logs/new_topic.html
+++ b/learning_log/learning_logs/new_topic.html
@@ -8,4 +8,4 @@
   <button name="submit">Add</button>
   <button onclick="{location.href='{% url 'learning_logs:topics' %}'}">Back</button>
 </form>
-{% endblock content %}
+{% endblock %}
