--- a/learning_log/learning_logs/new_entry.html
+++ b/learning_log/learning_logs/new_entry.html
@@ -1,13 +1,18 @@
 {% extends 'learning_logs/base.html' %}
+{% load bootstrap3 %}
+
+{% block header %}
+<h3><a href="{% url 'learning_logs:topic' topic.id %}">{{ topic }}</a></h3>
+{% endblock %}
 
 {% block content %}
-<p><a href="{% url 'learning_logs:topic' topic.id %}">{{ topic }}</a></p>
-
-<p>Add a new entry:</p>
-<form action="{% url 'learning_logs:new_entry' topic.id %}" method="POST">
+<h4>Add a new entry:</h4>
+<form action="{% url 'learning_logs:new_entry' topic.id %}" method="POST" class="form">
   {% csrf_token %}
-  {{ form.as_p }}
+  {% bootstrap_form form %}
+  {% buttons %}
   <button name="submit">Add</button>
   <button onclick="{location.href='{% url 'learning_logs:topic' topic.id %}'}">Back</button>
+  {% endbuttons %}
 </form>
 {% endblock %}
