--- a/learning_log/learning_logs/new_topic.html
+++ b/learning_log/learning_logs/new_topic.html
@@ -1,11 +1,17 @@
 {% extends 'learning_logs/base.html' %}
+{% load bootstrap3 %}
+
+{% block header%}
+<h2>Add a new topic:</h2>
+{% endblock %}
 
 {% block content %}
-<p>Add a new topic:</p>
-<form action="{% url 'learning_logs:new_topic' %}" method="POST">
+<form action="{% url 'learning_logs:new_topic' %}" method="POST" class="form">
   {% csrf_token %}
-  {{ form.as_p }}
+  {% bootstrap_form form %}
+  {% buttons %}
   <button name="submit">Add</button>
   <button onclick="{location.href='{% url 'learning_logs:topics' %}'}">Back</button>
+  {% endbuttons %}
 </form>
 {% endblock %}
